--- a/SWE_App/SWE_App.vcxproj
+++ b/SWE_App/SWE_App.vcxproj
@@ -32,6 +32,9 @@
     <ClInclude Include="Token.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="cpp.hint" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
